add message sent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
@@ -24,7 +24,9 @@ add_executable(qt
         main.cpp
         mainwindow.cpp
         mainwindow.h
-        mainwindow.ui
-        mainwindow.cpp)
+        mainwindow.cpp
+        message_sent.h
+        ui_mainwindow.h
+        mainwindow.ui)
 
 target_link_libraries(qt PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
