add backend and realize simple server-client chat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,3 @@
-# cmake_minimum_required(VERSION 3.19)
-# project(server)
-# set(CMAKE_CXX_STANDARD 14)
-# set(CMAKE_CXX_FLAGS "-pthread")
-# add_executable(server server.cpp)
-
 cmake_minimum_required(VERSION 3.5)
 
 project(qt LANGUAGES CXX)
@@ -16,18 +10,29 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(SRC_LIST_FRONTEND
+        "frontend/input_field.h"
+        "frontend/input_field.cpp"
+        "frontend/send_messages.h"
+        "frontend/send_messages.cpp")
+set(SRC_LIST_SERVER
+        "server/main.cpp"
+        "server/main_window.h"
+        "server/main_window.cpp"
+        "server/server.h"
+        "server/server.cpp")
+set(SRC_LIST_CLIENT
+        "client/main.cpp"
+        "client/main_window.h"
+        "client/main_window.cpp"
+        "client/client.h"
+        "client/client.cpp")
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
+find_package(Qt5 COMPONENTS Widgets Network REQUIRED)
+set(QT5_PREFERENCES Qt5::Widgets Qt5::Network)
 
-add_executable(qt
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.cpp
-        message_sent.h
-        message_sent.cpp
-        ui_mainwindow.h
-        mainwindow.ui)
+add_executable(server ${SRC_LIST_FRONTEND} ${SRC_LIST_SERVER})
+add_executable(client ${SRC_LIST_FRONTEND} ${SRC_LIST_CLIENT})
 
-target_link_libraries(qt PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(server PRIVATE ${QT5_PREFERENCES})
+target_link_libraries(client PRIVATE ${QT5_PREFERENCES})
